--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -286,7 +286,7 @@
                                                         <div class="govuk-checkboxes__item">
                                                             <input class="govuk-checkboxes__input" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onclick="selectOrDeselectApplication('{{ application.reference_number }}')">
                                                             <label class="govuk-label govuk-checkboxes__label" for="{{ application.reference_number }}">
-                                                                Application completed
+                                                                Delete
                                                             </label>
                                                         </div>
                                                     </div>
@@ -308,13 +308,13 @@
                                 <tr class="govuk-table__row">
                                     <td colspan="5" class="govuk-table__cell" style="text-align: right">
                                         <button id="submit-selected-apps-btn-completed" disabled="disabled" class="govuk-button govuk-!-margin-bottom-0 govuk-button--disabled" data-module="govuk-button" onclick="submitBulkMarkAsComplete('{{ url_for('applications.delete') }}')">
-                                            Apply applications completed
+                                            Delete selected applications
                                         </button>
                                         <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllApplications({{ completed_apps_references }})">
-                                            Select all as completed
+                                            Select all applications
                                         </button>
                                         <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="clearAllApplications({{ completed_apps_references }})">
-                                            Clear all as completed
+                                            Deselect all applications
                                         </button>
                                     </td>
                                 </tr>
