--- a/grc/templates/document-checker/doc-checker-base.html
+++ b/grc/templates/document-checker/doc-checker-base.html
@@ -85,17 +85,24 @@
 
         <div class="govuk-width-container">
             <div class="govuk-phase-banner">
-                <p class="govuk-phase-banner__content">
-                    <strong class="govuk-tag govuk-phase-banner__content__tag">
-                        beta
-                    </strong>
+                <p class="govuk-phase-banner__content govuk-!-width-full">
                     <span class="govuk-phase-banner__text">
-                    This is a new service - your
-                    <a href="{{ url_for('feedback.feedback_page') }}" class="govuk-link">
-                        feedback
-                    </a>
-                    will help us to improve it.
-                  </span>
+                        <strong class="govuk-tag govuk-phase-banner__content__tag">
+                            beta
+                        </strong>
+                        This is a new service - your
+                        <a href="{{ url_for('feedback.feedback_page') }}" class="govuk-link">
+                            feedback
+                        </a>
+                        will help us to improve it.
+                    </span>
+                    <span class="govuk-phase-banner__text govuk-!-text-align-right">
+                        {% if 'lang_code' in session and session['lang_code'] == 'cy' %}
+                        <a href="{{ url_for('set_language.index', lang_code='en') }}" hreflang="en" class="govuk-link">English</a>
+                        {% else %}
+                        <a href="{{ url_for('set_language.index', lang_code='cy') }}" hreflang="cy" class="govuk-link">Cymraeg</a>
+                        {% endif %}
+                </span>
                 </p>
             </div>
 
