--- a/grc/templates/policies/privacy-policy.html
+++ b/grc/templates/policies/privacy-policy.html
@@ -100,11 +100,11 @@
             </p>
             <p class="govuk-body">
                 {{ _('HMCTS will use your data to process your application and put it to the Gender Recognition panel for review') }}.
-                 {{ _('See the %(a_open)sHMCTS privacy notice (opens in a new tab)%(a_close)s for more information about how they process and hold your information', a_open='<a href="https://www.gov.uk/government/publications/hmcts-privacy-policy" target="_blank" class="govuk-link">', a_close='</a>') | safe }}.
+                 {{ _('See the') }} <a href="https://www.gov.uk/government/publications/hmcts-privacy-policy" target="_blank" class="govuk-link">{{ _('HMCTS privacy notice (opens in a new tab)') }}</a> {{ _('for more information about how they process and hold your information') }}.
                  {{ _('We permanently delete your application from our online system after it has been reviewed by the Gender Recognition panel') }}.
             </p>
             <p class="govuk-body">
-                {{ _('There is a separate %(a_open)sprivacy notice for GOV.UK Pay (opens in a new tab)%(a_close)s the government’s online payment service', a_open='<a href="https://www.payments.service.gov.uk/privacy/" target="_blank" class="govuk-link">', a_close='</a>') | safe }}.
+                {{ _('There is a separate') }} <a href="https://www.payments.service.gov.uk/privacy/" target="_blank" class="govuk-link">{{ _('privacy notice for GOV.UK Pay (opens in a new tab)') }}</a> {{ _("the government's online payment service") }}.
                  {{ _('You will need to use GOV.UK Pay if you pay for your GRC application online') }}.
             </p>
 
@@ -132,7 +132,7 @@
                  {{ _('You can do this by logging into your application') }}.
             </p>
             <p class="govuk-body">
-                {{ _('In certain circumstances, you may also object to or restrict the processing of your data by GEO by making a request to %(a_open)sgrc-requests@cabinetoffice.gov.uk%(a_close)s', a_open='<a href="mailto:grc-requests@cabinetoffice.gov.uk" class="govuk-link">', a_close='</a>') | safe }}
+                {{ _('In certain circumstances, you may also object to or restrict the processing of your data by GEO by making a request to') }} <a href="mailto:grc-requests@cabinetoffice.gov.uk" class="govuk-link">grc-requests@cabinetoffice.gov.uk</a>
             </p>
             <p class="govuk-body">
                 {{ _("After you have submitted your application, you will no longer be able to log in to access the 'apply for a gender recognition certificate' service") }}.
