add welsh translations to privacy policy

--- a/grc/templates/policies/privacy-policy.html
+++ b/grc/templates/policies/privacy-policy.html
@@ -104,7 +104,7 @@
                  {{ _('We permanently delete your application from our online system after it has been reviewed by the Gender Recognition panel') }}.
             </p>
             <p class="govuk-body">
-                {{ _('There is a separate') }} <a href="https://www.payments.service.gov.uk/privacy/" target="_blank" class="govuk-link">{{ _('privacy notice for GOV.UK Pay (opens in a new tab)') }}</a> {{ _("the government's online payment service") }}.
+                {{ _('There is a separate') }} <a href="https://www.payments.service.gov.uk/privacy/" target="_blank" class="govuk-link">{{ _('privacy notice for GOV.UK Pay (opens in a new tab)') }},</a> {{ _("the government's online payment service") }}.
                  {{ _('You will need to use GOV.UK Pay if you pay for your GRC application online') }}.
             </p>
 
