--- a/grc/templates/policies/accessibility-statement.html
+++ b/grc/templates/policies/accessibility-statement.html
@@ -38,7 +38,7 @@
                  {{ _('For example, that means you should be able to:') }}
             </p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>{{ _('zoom in up to 300% without problems') }}</li>
+                <li>{{ _('zoom in up to 300%% without problems') }}</li>
                 <li>{{ _('navigate most of the website using just a keyboard') }}</li>
                 <li>{{ _('navigate most of the website using speech recognition software') }}</li>
                 <li>{{ _('use most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)') }}</li>
