--- a/grc/templates/policies/cookies.html
+++ b/grc/templates/policies/cookies.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Cookies{% endblock %}
+{% block title %}{{ _('Cookies') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
@@ -17,81 +17,87 @@
                     </div>
                 </div>
 
-                <h1 class="govuk-heading-xl">Cookies</h1>
-                <p class="govuk-body"><a href="/" class="govuk-link">GOV.UK Gender Recognition Certificate</a> puts small files (known as ‘cookies’) on your computer.</p>
-                <p class="govuk-body">These cookies are used across the GOV.UK Gender Recognition Certificate website.</p>
-                <p class="govuk-body">We only set cookies when JavaScript is running in your browser and you’ve accepted them. If you choose not to run Javascript, the information on this page will not apply to you.</p>
+                <h1 class="govuk-heading-xl">{{ _('Cookies') }}</h1>
+                <p class="govuk-body"><a href="/" class="govuk-link">{{ _('GOV.UK Gender Recognition Certificate') }}</a> {{ _("puts small files (known as ‘cookies’) on your computer") }}.</p>
+                <p class="govuk-body">{{ _('These cookies are used across the GOV.UK Gender Recognition Certificate website') }}.</p>
+                <p class="govuk-body">
+                    {{ _('We only set cookies when JavaScript is running in your browser and you’ve accepted them') }}.
+                     {{ _('If you choose not to run Javascript, the information on this page will not apply to you') }}.
+                </p>
                 <!--[if lt IE 9]>
-                <p class="govuk-body">If you use an older browser, such as Internet Explorer 8 or earlier, the cookies we use will not affect you.</p>
+                <p class="govuk-body">{{ _('If you use an older browser, such as Internet Explorer 8 or earlier, the cookies we use will not affect you') }}.</p>
                 <![endif]-->
-                <p class="govuk-body">Find out <a href="https://ico.org.uk/for-the-public/online/cookies" class="govuk-link">how to manage cookies</a> from the Information Commissioner's Office.</p>
+                <p class="govuk-body">{{ _('Find out') }} <a href="https://ico.org.uk/for-the-public/online/cookies" class="govuk-link">{{ _('how to manage cookies') }}</a> {{ _("from the Information Commissioner's Office") }}.</p>
 
                 <form class="js-cookies-page-form">
-                    <h2 class="govuk-heading-l govuk-!-margin-top-6">Essential cookies (strictly necessary)</h2>
-                    <p class="govuk-body">We use an essential cookie to remember when you accept or reject cookies on our website.</p>
+                    <h2 class="govuk-heading-l govuk-!-margin-top-6">{{ _('Essential cookies (strictly necessary)') }}</h2>
+                    <p class="govuk-body">{{ _('We use an essential cookie to remember when you accept or reject cookies on our website') }}.</p>
 
                     <table class="govuk-table">
-                        <caption class="govuk-table__caption">Essential cookies we use</caption>
+                        <caption class="govuk-table__caption">{{ _('Essential cookies we use') }}</caption>
                         <thead class="govuk-table__head">
                             <tr class="govuk-table__row">
-                                <th scope="col" class="govuk-table__header">Name</th>
-                                <th scope="col" class="govuk-table__header">Purpose</th>
-                                <th scope="col" class="govuk-table__header">Expires</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Name') }}</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Purpose') }}</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Expires') }}</th>
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
 
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">session</th>
-                                <td class="govuk-table__cell">Saves your progress on the website</td>
-                                <td class="govuk-table__cell">When you close your browser tab</td>
+                                <td class="govuk-table__cell">{{ _('Saves your progress on the website') }}</td>
+                                <td class="govuk-table__cell">{{ _('When you close your browser tab') }}</td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">grc_cookies_policy</th>
-                                <td class="govuk-table__cell">Saves your cookie consent settings</td>
-                                <td class="govuk-table__cell">1 year</td>
+                                <td class="govuk-table__cell">{{ _('Saves your cookie consent settings') }}</td>
+                                <td class="govuk-table__cell">{{ _('1 year') }}</td>
                             </tr>
                         </tbody>
                     </table>
 
-                    <h2 class="govuk-heading-l govuk-!-margin-top-6">Analytics cookies (optional)</h2>
-                    <p class="govuk-body">We use Google Analytics software to understand how people use the GOV.UK Gender Recognition Certificate. We do this to help make sure the site is meeting the needs of its users and to help us make improvements.</p>
-                    <p class="govuk-body">We do not collect or store your personal information (for example your name or address) so this information cannot be used to identify who you are.</p>
-                    <p class="govuk-body">We do not allow Google to use or share our analytics data.</p>
-                    <p class="govuk-body">Google Analytics stores information about:</p>
+                    <h2 class="govuk-heading-l govuk-!-margin-top-6">{{ _('Analytics cookies (optional)') }}</h2>
+                    <p class="govuk-body">
+                        {{ _('We use Google Analytics software to understand how people use the GOV.UK Gender Recognition Certificate') }}.
+                         {{ _('We do this to help make sure the site is meeting the needs of its users and to help us make improvements') }}.
+                    </p>
+                    <p class="govuk-body">{{ _('We do not collect or store your personal information (for example your name or address) so this information cannot be used to identify who you are') }}.</p>
+                    <p class="govuk-body">{{ _('We do not allow Google to use or share our analytics data') }}.</p>
+                    <p class="govuk-body">{{ _('Google Analytics stores information about:') }}</p>
 
                     <ul class="govuk-list govuk-list--bullet">
-                        <li>the pages you visit</li>
-                        <li>how long you spend on each page</li>
-                        <li>how you arrived at the site</li>
-                        <li>what you click on while you visit the site</li>
-                        <li>the device and browser you use</li>
+                        <li>{{ _('the pages you visit') }}</li>
+                        <li>{{ _('how long you spend on each page') }}</li>
+                        <li>{{ _('how you arrived at the site') }}</li>
+                        <li>{{ _('what you click on while you visit the site') }}</li>
+                        <li>{{ _('the device and browser you use') }}</li>
                     </ul>
 
                     <table class="govuk-table">
-                        <caption class="govuk-table__caption">Analytics cookies we use</caption>
+                        <caption class="govuk-table__caption">{{ _('Analytics cookies we use') }}</caption>
                         <thead class="govuk-table__head">
                             <tr class="govuk-table__row">
-                                <th scope="col" class="govuk-table__header">Name</th>
-                                <th scope="col" class="govuk-table__header">Purpose</th>
-                                <th scope="col" class="govuk-table__header">Expires</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Name') }}</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Purpose') }}</th>
+                                <th scope="col" class="govuk-table__header">{{ _('Expires') }}</th>
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">_ga</th>
-                                <td class="govuk-table__cell">Helps us count how many people visit the GOV.UK Gender Recognition Certificate by telling us if you’ve visited before.</td>
-                                <td class="govuk-table__cell">2 years</td>
+                                <td class="govuk-table__cell">{{ _('Helps us count how many people visit the GOV.UK Gender Recognition Certificate by telling us if you’ve visited before') }}.</td>
+                                <td class="govuk-table__cell">{{ _('2 years') }}</td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">_gid</th>
-                                <td class="govuk-table__cell">Helps us count how many people visit the GOV.UK Gender Recognition Certificate by telling us if you’ve visited before.</td>
-                                <td class="govuk-table__cell">24 hours</td>
+                                <td class="govuk-table__cell">{{ _('Helps us count how many people visit the GOV.UK Gender Recognition Certificate by telling us if you’ve visited before') }}.</td>
+                                <td class="govuk-table__cell">{{ _('24 hours') }}</td>
                             </tr>
                             <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header">_gat_UA-[random number]</th>
-                                <td class="govuk-table__cell">Used to reduce the number of requests.</td>
-                                <td class="govuk-table__cell">1 minute</td>
+                                <td class="govuk-table__cell">{{ _('Used to reduce the number of requests') }}.</td>
+                                <td class="govuk-table__cell">{{ _('1 minute') }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -99,19 +105,19 @@
                     <div class="govuk-form-group">
                         <fieldset class="govuk-fieldset js-cookies-page-form-fieldset" id="analytics">
                             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                                Do you want to accept analytics cookies?
+                                {{ _('Do you want to accept analytics cookies?') }}
                             </legend>
                             <div class="govuk-radios" data-module="govuk-radios">
                                 <div class="govuk-radios__item">
                                     <input class="govuk-radios__input" id="radio-analytics" name="analytics" type="radio" value="yes">
                                     <label class="govuk-label govuk-radios__label" for="radio-analytics">
-                                        Yes
+                                        {{ _('Yes') }}
                                     </label>
                                 </div>
                                 <div class="govuk-radios__item">
                                     <input class="govuk-radios__input" id="radio-analytics-2" name="analytics" type="radio" value="no">
                                     <label class="govuk-label govuk-radios__label" for="radio-analytics-2">
-                                        No
+                                        {{ _('No') }}
                                     </label>
                                 </div>
                             </div>
@@ -119,7 +125,7 @@
                     </div>
 
                     <button class="govuk-button js-cookies-form-button" data-module="govuk-button">
-                        Save cookie settings
+                        {{ _('Save cookie settings') }}
                     </button>
                 </form>
             </div>
