extract success message text

--- a/grc/templates/policies/cookies.html
+++ b/grc/templates/policies/cookies.html
@@ -9,11 +9,11 @@
                 <div class="govuk-notification-banner govuk-notification-banner--success js-cookies-page-success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" hidden="true" tabindex="-1">
                     <div class="govuk-notification-banner__header">
                         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                            Success
+                            {{ _('Success') }}
                         </h2>
                     </div>
                     <div class="govuk-notification-banner__content">
-                        <p class="govuk-notification-banner__heading">You’ve set your cookie preferences.</p>
+                        <p class="govuk-notification-banner__heading">{{ _("You’ve set your cookie preferences") }}.</p>
                     </div>
                 </div>
 
