RST-6413 extract text for trans doc checker page 1

--- a/grc/templates/document-checker/doc-checker-base.html
+++ b/grc/templates/document-checker/doc-checker-base.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="govuk-header__content">
                     <a href="{{ url_for('documentChecker.index') }}" class="govuk-header__link govuk-header__link--service-name">
-                        Check documents needed to apply for a Gender Recognition Certificate
+                        {{ _('Check documents needed to apply for a Gender Recognition Certificate') }}
                     </a>
                 </div>
             </div>
