--- a/grc/templates/document-checker/start.html
+++ b/grc/templates/document-checker/start.html
@@ -1,39 +1,36 @@
 {% extends 'document-checker/doc-checker-base.html' %}
 
-{% block title %}Before you start{% endblock %}
+{% block title %}{{ _('Before you start') }}{% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
             <h1 class="govuk-heading-l">
-                Before you start
+                {{ _('Before you start') }}
             </h1>
 
             <p class="govuk-body">
-                Use this tool to check which documents you need for your Gender Recognition Certificate application.
+                {{ _('Use this tool to check which documents you need for your Gender Recognition Certificate application') }}.
             </p>
             <p class="govuk-body">
-                Answering the questions means we can give you a list of documents based on your personal circumstances.
-                You can have the list of documents sent to you by email at the end.
+                {{ _('Answering the questions means we can give you a list of documents based on your personal circumstances') }}.
+                {{ _('You can have the list of documents sent to you by email at the end') }}.
             </p>
             <p class="govuk-body">
-                This is not part of the application process and is designed only to help you prepare the documents
-                you need before you start your application.
+                {{ _('This is not part of the application process and is designed only to help you prepare the documents you need before you start your application') }}.
             </p>
             <p class="govuk-body">
-                We do not store any of the information you enter in this tool.
+                {{ _('We do not store any of the information you enter in this tool') }}.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-8">
-                If you already have your documents ready you can
-                <a href="{{ url_for('startApplication.index') }}" class="govuk-link">
-                    start your application</a>.
+                {{ _('If you already have your documents ready you can') }} <a href="{{ url_for('startApplication.index') }}" class="govuk-link">{{ _('start your application') }}</a>.
             </p>
 
             <p class="govuk-body">
                 <a href="{{ url_for('documentChecker.previousNamesCheck') }}"
                    role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-                    Continue
+                    {{ _('Continue') }}
                 </a>
             </p>
 
