--- a/admin/templates/govuk-design-system-templates/back_link.html
+++ b/admin/templates/govuk-design-system-templates/back_link.html
@@ -1,3 +1,3 @@
-{% macro renderFor(link) %}
-    <a href="{{ link }}" class="govuk-back-link">{{ _('Back') }}</a>
+{% macro renderFor(url) %}
+    <a href="{{ url }}" class="govuk-back-link">{{ _('Back') }}</a>
 {% endmacro %}
