--- a/admin/templates/govuk-design-system-templates/back_link.html
+++ b/admin/templates/govuk-design-system-templates/back_link.html
@@ -1,3 +1,3 @@
 {% macro renderFor(url) %}
-    <a href="{{ url }}" class="govuk-back-link">{{ _('Back') }}</a>
+    <a href="{{ url_for(url) }}" class="govuk-back-link">{{ _('Back') }}</a>
 {% endmacro %}
