--- a/grc/templates/document-checker/previous-names-check.html
+++ b/grc/templates/document-checker/previous-names-check.html
@@ -1,11 +1,13 @@
 {% extends 'document-checker/doc-checker-base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Have you ever changed your name to reflect your gender?{% endblock %}
+{% block title %}{{ _('Have you ever changed your name to reflect your gender?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('documentChecker.index') }}" class="govuk-back-link">Back</a>
+    {{ back.renderFor('documentChecker.index') }}
 {% endblock %}
 
 {% block content %}
@@ -15,23 +17,23 @@
             {{ error_summary.renderFor(form) }}
 
             <h1 class="govuk-heading-l">
-                If you have ever changed your name to reflect your gender
+                {{ _('If you have ever changed your name to reflect your gender') }}
             </h1>
 
             <p class="govuk-body">
-                You will need to send us documents that show this.
-                If you have changed your name more than once, we will need to see documents for each instance.
+                {{ _('You will need to send us documents that show this') }}.
+                {{ _('If you have changed your name more than once, we will need to see documents for each instance') }}.
             </p>
             <p class="govuk-body">
-                We ask for this so we can match your birth records after you receive a Gender Recognition Certificate.
+                {{ _('We ask for this so we can match your birth records after you receive a Gender Recognition Certificate') }}.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-2">
-                These documents are likely to be:
+                {{ _('These documents are likely to be:') }}
             </p>
             <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
-                <li>deed poll documents, either enrolled or unenrolled</li>
-                <li>change of name documents (Scotland)</li>
-                <li>statutory declarations</li>
+                <li>{{ _('deed poll documents, either enrolled or unenrolled') }}</li>
+                <li>{{ _('change of name documents (Scotland)') }}</li>
+                <li>{{ _('statutory declarations') }}</li>
             </ul>
 
             <form method="POST">
@@ -40,17 +42,13 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='changed_name_to_reflect_gender',
-                    question="Have you ever changed your name to reflect your gender?",
+                    question=_('Have you ever changed your name to reflect your gender?'),
                     radiosOptions={
                         'questionClasses': 'govuk-fieldset__legend--m'
                     }
                 ) }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Continue
-                    </button>
-                </div>
+                {{ continue.renderFor() }}
             </form>
 
         </div>
