--- a/grc/templates/document-checker/currently_in_a_partnership.html
+++ b/grc/templates/document-checker/currently_in_a_partnership.html
@@ -1,11 +1,13 @@
 {% extends 'document-checker/doc-checker-base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Are you currently married or in a civil partnership?{% endblock %}
+{% block title %}{{ _('Are you currently married or in a civil partnership?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('documentChecker.previousNamesCheck') }}" class="govuk-back-link">Back</a>
+    {{ back.renderFor('documentChecker.previousNamesCheck') }}
 {% endblock %}
 
 {% block content %}
@@ -20,23 +22,19 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='currently_in_a_partnership',
-                    question="Are you currently married or in a civil partnership?",
+                    question=_("Are you currently married or in a civil partnership?"),
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'hintOptions':{
-                            'htmlOrText': 'Select your current legal status, even if you are planning to end your marriage or civil partnership.'
+                            'htmlOrText': _('Select your current legal status, even if you are planning to end your marriage or civil partnership.')
                         },
                         'dividerOptions': [
-                            (CurrentlyInAPartnershipEnum.NEITHER.name, 'or')
+                            (CurrentlyInAPartnershipEnum.NEITHER.name, _('or'))
                         ]
                     }
                 ) }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Continue
-                    </button>
-                </div>
+                {{ continue.renderFor() }}
             </form>
 
         </div>
