--- a/grc/templates/document-checker/previous-partnership-ended.html
+++ b/grc/templates/document-checker/previous-partnership-ended.html
@@ -1,11 +1,13 @@
 {% extends 'document-checker/doc-checker-base.html' %}
 {% import "govuk-design-system-templates/error-summary.html" as error_summary %}
 {% import "govuk-design-system-templates/radios.html" as radios %}
+{% import "govuk-design-system-templates/back_link.html" as back %}
+{% import "govuk-design-system-templates/continue.html" as continue %}
 
-{% block title %}Have you ever been in a marriage or civil partnership that ended for another reason?{% endblock %}
+{% block title %}{{ _('Have you ever been in a marriage or civil partnership that ended for another reason?') }}{% endblock %}
 
 {% block backLink %}
-    <a href="{{ url_for('documentChecker.previousPartnershipPartnerDied') }}" class="govuk-back-link">Back</a>
+    {{ back.renderFor('documentChecker.previousPartnershipPartnerDied') }}
 {% endblock %}
 
 {% block content %}
@@ -20,17 +22,13 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='previous_partnership_ended',
-                    question="Have you ever been in a marriage or civil partnership that ended for another reason?",
+                    question=_("Have you ever been in a marriage or civil partnership that ended for another reason?"),
                     radiosOptions={
                         'questionIsPageHeading': true,
                     }
                 ) }}
 
-                <div class="govuk-button-group">
-                    <button class="govuk-button" data-module="govuk-button">
-                        Continue
-                    </button>
-                </div>
+                {{ continue.renderFor() }}
             </form>
 
         </div>
