render question correctly

--- a/grc/templates/document-checker/plan-to-remain-in-a-partnership.html
+++ b/grc/templates/document-checker/plan-to-remain-in-a-partnership.html
@@ -22,7 +22,7 @@
                 {{ radios.renderFor(
                     form,
                     fieldName='plan_to_remain_in_a_partnership',
-                    question={{ question }},
+                    question=question,
                     radiosOptions={
                         'questionIsPageHeading': true
                     }
