--- a/dashboard/templates/govuk-design-system-templates/error-summary.html
+++ b/dashboard/templates/govuk-design-system-templates/error-summary.html
@@ -3,7 +3,7 @@
     {% if form.errors %}
     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
         <h2 id="error-summary-title" class="govuk-error-summary__title">
-            {{ _('There is a problem') }}
+            There is a problem
         </h2>
         <div class="govuk-error-summary__body">
             <ul class="govuk-list govuk-error-summary__list">
